src/compiler/grammar.ts
/* eslint-disable no-constant-condition */
import * as peg from 'pegjs';
import * as T from './compiler/types';
import {OpCodes}  from './compiler';
export default function (T: any, OpCodes: Record<string, number>): peg.Parser {const module = { exports: null };
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  const DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          let escapedParts = "";
              let i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    const descriptions = new Array(expected.length);
        let i; let j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  const peg$FAILED = {};

      const peg$startRuleFunctions = { Program: peg$parseProgram };
      let peg$startRuleFunction  = peg$parseProgram;

      const peg$c0 = function(c) { return c };
      const peg$c1 = peg$otherExpectation("statement");
      const peg$c2 = peg$otherExpectation("comment");
      const peg$c3 = "//";
      const peg$c4 = peg$literalExpectation("//", false);
      const peg$c5 = /^[^\n]/;
      const peg$c6 = peg$classExpectation(["\n"], true, false);
      const peg$c7 = function() { return [] };
      const peg$c8 = peg$otherExpectation("system instruction");
      const peg$c9 = "delay";
      const peg$c10 = peg$literalExpectation("delay", false);
      const peg$c11 = function(delay) { return [OpCodes.Delay, ...delay]; };
      const peg$c12 = "sleep";
      const peg$c13 = peg$literalExpectation("sleep", false);
      const peg$c14 = function(delay) { return [OpCodes.Sleep, ...delay]; };
      const peg$c15 = "halt";
      const peg$c16 = peg$literalExpectation("halt", false);
      const peg$c17 = function() { return [OpCodes.Halt]; };
      const peg$c18 = "restart";
      const peg$c19 = peg$literalExpectation("restart", false);
      const peg$c20 = function() { return [OpCodes.Restart]; };
      const peg$c21 = "noop";
      const peg$c22 = peg$literalExpectation("noop", false);
      const peg$c23 = function() { return [OpCodes.Noop]; };
      const peg$c24 = "jump";
      const peg$c25 = peg$literalExpectation("jump", false);
      const peg$c26 = "to";
      const peg$c27 = peg$literalExpectation("to", false);
      const peg$c28 = function(address) { return [OpCodes.JumpTo, ...address]; };
      const peg$c29 = function(label) { return [OpCodes.JumpTo, T.Placeholder.create(label), 0, 0, 0] };
      const peg$c30 = "if";
      const peg$c31 = peg$literalExpectation("if", false);
      const peg$c32 = "then";
      const peg$c33 = peg$literalExpectation("then", false);
      const peg$c34 = function(condition, label) { return [OpCodes.JumpIf, ...condition, T.Placeholder.create(label), 0, 0, 0] };
      const peg$c35 = "yield";
      const peg$c36 = peg$literalExpectation("yield", false);
      const peg$c37 = function(delay) { return [OpCodes.Yield, ...delay]; };
      const peg$c38 = "sysinfo";
      const peg$c39 = peg$literalExpectation("sysinfo", false);
      const peg$c40 = function() { return [OpCodes.SystemInfo]; };
      const peg$c41 = "debug";
      const peg$c42 = peg$literalExpectation("debug", false);
      const peg$c43 = function(byte) { return [OpCodes.Debug, byte]; };
      const peg$c44 = "dump";
      const peg$c45 = peg$literalExpectation("dump", false);
      const peg$c46 = function() { return [OpCodes.Dump]; };
      const peg$c47 = "print";
      const peg$c48 = peg$literalExpectation("print", false);
      const peg$c49 = function(value) { return [OpCodes.Print, ...value]; };
      const peg$c50 = /^[a-zA-Z]/;
      const peg$c51 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
      const peg$c52 = /^[a-zA-Z0-9_]/;
      const peg$c53 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
      const peg$c54 = function() { return text() };
      const peg$c55 = "@";
      const peg$c56 = peg$literalExpectation("@", false);
      const peg$c57 = function(label) { return T.Reference.create(label); };
      const peg$c58 = "var";
      const peg$c59 = peg$literalExpectation("var", false);
      const peg$c60 = function(t) { return T.DeclareIdentifier.create(t) };
      const peg$c61 = "memget";
      const peg$c62 = peg$literalExpectation("memget", false);
      const peg$c63 = function() { return [0x05]; };
      const peg$c64 = "memset";
      const peg$c65 = peg$literalExpectation("memset", false);
      const peg$c66 = function() { return [0x06]; };
      const peg$c67 = "copy";
      const peg$c68 = peg$literalExpectation("copy", false);
      const peg$c69 = function() { return [0x1b]; };
      const peg$c70 = "not";
      const peg$c71 = peg$literalExpectation("not", false);
      const peg$c72 = function(target, value) { return [0x13, target, value]; };
      const peg$c73 = "gte";
      const peg$c74 = peg$literalExpectation("gte", false);
      const peg$c75 = function() { return [0x0a]; };
      const peg$c76 = "gt";
      const peg$c77 = peg$literalExpectation("gt", false);
      const peg$c78 = function() { return [0x09]; };
      const peg$c79 = "lte";
      const peg$c80 = peg$literalExpectation("lte", false);
      const peg$c81 = function() { return [0x0c]; };
      const peg$c82 = "lt";
      const peg$c83 = peg$literalExpectation("lt", false);
      const peg$c84 = function() { return [0x0b]; };
      const peg$c85 = "equal";
      const peg$c86 = peg$literalExpectation("equal", false);
      const peg$c87 = function() { return [0x0d]; };
      const peg$c88 = "notequal";
      const peg$c89 = peg$literalExpectation("notequal", false);
      const peg$c90 = function() { return [0x0e]; };
      const peg$c91 = "xor";
      const peg$c92 = peg$literalExpectation("xor", false);
      const peg$c93 = function() { return [0x10]; };
      const peg$c94 = "and";
      const peg$c95 = peg$literalExpectation("and", false);
      const peg$c96 = function() { return [0x11]; };
      const peg$c97 = "or";
      const peg$c98 = peg$literalExpectation("or", false);
      const peg$c99 = function() { return [0x12]; };
      const peg$c100 = "inc";
      const peg$c101 = peg$literalExpectation("inc", false);
      const peg$c102 = function() { return [0x14]; };
      const peg$c103 = "dec";
      const peg$c104 = peg$literalExpectation("dec", false);
      const peg$c105 = function() { return [0x15]; };
      const peg$c106 = "add";
      const peg$c107 = peg$literalExpectation("add", false);
      const peg$c108 = function() { return [0x16]; };
      const peg$c109 = "sub";
      const peg$c110 = peg$literalExpectation("sub", false);
      const peg$c111 = function() { return [0x17]; };
      const peg$c112 = "mul";
      const peg$c113 = peg$literalExpectation("mul", false);
      const peg$c114 = function() { return [0x18]; };
      const peg$c115 = "div";
      const peg$c116 = peg$literalExpectation("div", false);
      const peg$c117 = function() { return [0x19]; };
      const peg$c118 = "mod";
      const peg$c119 = peg$literalExpectation("mod", false);
      const peg$c120 = function() { return [0x1a]; };
      const peg$c121 = "io write";
      const peg$c122 = peg$literalExpectation("io write", false);
      const peg$c123 = function(pin, value) { return [OpCodes.IoWrite, pin, ...value]; };
      const peg$c124 = "io read";
      const peg$c125 = peg$literalExpectation("io read", false);
      const peg$c126 = function(pin, value) { return [OpCodes.IoRead, pin, ...value]; };
      const peg$c127 = "io mode";
      const peg$c128 = peg$literalExpectation("io mode", false);
      const peg$c129 = function(pin, mode) { return [OpCodes.IoMode, pin, mode]; };
      const peg$c130 = "io type";
      const peg$c131 = peg$literalExpectation("io type", false);
      const peg$c132 = function(pin, type) { return [OpCodes.IoType, pin, type]; };
      const peg$c133 = "io allout";
      const peg$c134 = peg$literalExpectation("io allout", false);
      const peg$c135 = function() { return [OpCodes.IoAllOut]; };
      const peg$c136 = "net connect";
      const peg$c137 = peg$literalExpectation("net connect", false);
      const peg$c138 = function(net, pwd) { return [0x3a, ...net, ...pwd]; };
      const peg$c139 = "net disconnect";
      const peg$c140 = peg$literalExpectation("net disconnect", false);
      const peg$c141 = function() { return [0x3b]; };
      const peg$c142 = "net status";
      const peg$c143 = peg$literalExpectation("net status", false);
      const peg$c144 = function() { return [0x3c]; };
      const peg$c145 = "net list";
      const peg$c146 = peg$literalExpectation("net list", false);
      const peg$c147 = function() { return [0x3e]; };
      const peg$c148 = "i2setup";
      const peg$c149 = peg$literalExpectation("i2setup", false);
      const peg$c150 = function() { return [0x40]; };
      const peg$c151 = "i2start";
      const peg$c152 = peg$literalExpectation("i2start", false);
      const peg$c153 = function() { return [0x41]; };
      const peg$c154 = "i2stop";
      const peg$c155 = peg$literalExpectation("i2stop", false);
      const peg$c156 = function() { return [0x42]; };
      const peg$c157 = "i2write";
      const peg$c158 = peg$literalExpectation("i2write", false);
      const peg$c159 = function() { return [0x43]; };
      const peg$c160 = "i2read";
      const peg$c161 = peg$literalExpectation("i2read", false);
      const peg$c162 = function() { return [0x44]; };
      const peg$c163 = "i2setack";
      const peg$c164 = peg$literalExpectation("i2setack", false);
      const peg$c165 = function() { return [0x45]; };
      const peg$c166 = "i2getack";
      const peg$c167 = peg$literalExpectation("i2getack", false);
      const peg$c168 = function() { return [0x46]; };
      const peg$c169 = "i2find";
      const peg$c170 = peg$literalExpectation("i2find", false);
      const peg$c171 = function() { return [0x48]; };
      const peg$c172 = "i2writeack";
      const peg$c173 = peg$literalExpectation("i2writeack", false);
      const peg$c174 = function() { return [0x49]; };
      const peg$c175 = "i2writeack_b";
      const peg$c176 = peg$literalExpectation("i2writeack_b", false);
      const peg$c177 = function() { return [0x4a]; };
      const peg$c178 = peg$otherExpectation("hexadecimal");
      const peg$c179 = /^[0-9A-Fa-f]/;
      const peg$c180 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false);
      const peg$c181 = peg$otherExpectation("byte hex");
      const peg$c182 = peg$otherExpectation("Byte");
      const peg$c183 = "0x";
      const peg$c184 = peg$literalExpectation("0x", false);
      const peg$c185 = function() { return parseInt(text(), 16) };
      const peg$c186 = /^[ \t]/;
      const peg$c187 = peg$classExpectation([" ", "\t"], false, false);
      const peg$c188 = peg$otherExpectation("space");
      const peg$c189 = peg$otherExpectation("new line");
      const peg$c190 = /^[\n]/;
      const peg$c191 = peg$classExpectation(["\n"], false, false);
      const peg$c192 = peg$otherExpectation("separator");
      const peg$c193 = ",";
      const peg$c194 = peg$literalExpectation(",", false);
      const peg$c195 = peg$otherExpectation("0..9");
      const peg$c196 = /^[0-9]/;
      const peg$c197 = peg$classExpectation([["0", "9"]], false, false);
      const peg$c198 = peg$otherExpectation("1..9");
      const peg$c199 = /^[1-9]/;
      const peg$c200 = peg$classExpectation([["1", "9"]], false, false);
      const peg$c201 = peg$otherExpectation("a-z");
      const peg$c202 = /^[a-z]/i;
      const peg$c203 = peg$classExpectation([["a", "z"]], false, true);
      const peg$c204 = peg$otherExpectation("a-z or 0-9");
      const peg$c205 = peg$otherExpectation("pin mode");
      const peg$c206 = /^[0-3]/;
      const peg$c207 = peg$classExpectation([["0", "3"]], false, false);
      const peg$c208 = function(mode) { return Number(mode) };
      const peg$c209 = "true";
      const peg$c210 = peg$literalExpectation("true", false);
      const peg$c211 = function() { return 1 };
      const peg$c212 = "false";
      const peg$c213 = peg$literalExpectation("false", false);
      const peg$c214 = function() { return 0 };
      const peg$c215 = peg$otherExpectation("integer");
      const peg$c216 = "0";
      const peg$c217 = peg$literalExpectation("0", false);
      const peg$c218 = function() { return parseInt(text()) };
      const peg$c219 = "-";
      const peg$c220 = peg$literalExpectation("-", false);
      const peg$c221 = function(int) { return -1 * int };
      const peg$c222 = peg$otherExpectation("string");
      const peg$c223 = "'";
      const peg$c224 = peg$literalExpectation("'", false);
      const peg$c225 = peg$anyExpectation();
      const peg$c226 = function(string) { return string.map(s => s[1]) };
      const peg$c227 = peg$otherExpectation("address");
      const peg$c228 = function(a, b, c, d) { return [d, c, b, a] };
      const peg$c229 = peg$otherExpectation("pin");
      const peg$c230 = "pin ";
      const peg$c231 = peg$literalExpectation("pin ", false);
      const peg$c232 = "10";
      const peg$c233 = peg$literalExpectation("10", false);
      const peg$c234 = "11";
      const peg$c235 = peg$literalExpectation("11", false);
      const peg$c236 = "12";
      const peg$c237 = peg$literalExpectation("12", false);
      const peg$c238 = "13";
      const peg$c239 = peg$literalExpectation("13", false);
      const peg$c240 = "14";
      const peg$c241 = peg$literalExpectation("14", false);
      const peg$c242 = "15";
      const peg$c243 = peg$literalExpectation("15", false);
      const peg$c244 = function(pin) { return Number(pin) };
      const peg$c245 = peg$otherExpectation("identifier");
      const peg$c246 = "$";
      const peg$c247 = peg$literalExpectation("$", false);
      const peg$c248 = function(head, tail) { return text(); };
      const peg$c249 = "_";
      const peg$c250 = peg$literalExpectation("_", false);
      const peg$c251 = function(name) { return T.IdentifierValue.create(name) };
      const peg$c252 = function(pin) { return T.PinValue.create(pin) };
      const peg$c253 = function(byte) { return T.ByteValue.create(byte) };
      const peg$c254 = function(address) { return T.AddressValue.create(address) };
      const peg$c255 = function(number) { return T.IntegerValue.create(number) };
      const peg$c256 = function(number) { return T.SignedIntegerValue.create(number) };
      const peg$c257 = function(string) { return T.StringValue.create(string) };
      const peg$c258 = peg$otherExpectation("identifier, address or IO pin");

      let peg$currPos          = 0;
      let peg$savedPos         = 0;
      const peg$posDetailsCache  = [{ line: 1, column: 1 }];
      let peg$maxFailPos       = 0;
      let peg$maxFailExpected  = [];
      let peg$silentFails      = 0;

      let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos]; let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    const startPosDetails = peg$computePosDetails(startPos);
        const endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    let s0; let s1; let s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLine();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLine();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseLine() {
    let s0; let s1; let s2; let s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseSpaces();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseStatement();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNewLine();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseComment() {
    let s0; let s1; let s2; let s3; let s4;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c3) {
      s2 = peg$c3;
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      if (peg$c5.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7();
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseStatement() {
    let s0; let s1;

    peg$silentFails++;
    s0 = peg$parseDefineLabel();
    if (s0 === peg$FAILED) {
      s0 = peg$parseSystemInstruction();
      if (s0 === peg$FAILED) {
        s0 = peg$parseMemoryInstruction();
        if (s0 === peg$FAILED) {
          s0 = peg$parseOperator();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIoInstruction();
            if (s0 === peg$FAILED) {
              s0 = peg$parseWifiInstruction();
              if (s0 === peg$FAILED) {
                s0 = peg$parseI2cInstruction();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseComment();
                }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseSystemInstruction() {
    let s0; let s1;

    peg$silentFails++;
    s0 = peg$parsehalt();
    if (s0 === peg$FAILED) {
      s0 = peg$parserestart();
      if (s0 === peg$FAILED) {
        s0 = peg$parsesysinfo();
        if (s0 === peg$FAILED) {
          s0 = peg$parsedebug();
          if (s0 === peg$FAILED) {
            s0 = peg$parsedump();
            if (s0 === peg$FAILED) {
              s0 = peg$parsenoop();
              if (s0 === peg$FAILED) {
                s0 = peg$parseyield();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseprint();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parsejump_to();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsejump_if();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsedelay();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseDeclareVar();
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    return s0;
  }

  function peg$parsedelay() {
    let s0; let s1; let s2; let s3;
